--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
+    "build: "npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
